force-app/main/default/objects/Case/fields/Anexos__c.field-meta.xml
<CustomField>
    <fullName>Anexos__c</fullName>
    <label>Anexos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>