force-app/main/default/objects/Case/fields/assunto__c.field-meta.xml
<CustomField>
    <fullName>assunto__c</fullName>
    <label>Assunto</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATENDIMENTO TÉCNICO</fullName>
            </value>
            <value>
                <fullName>COMPRAR</fullName>
            </value>
            <value>
                <fullName>ELOGIO</fullName>
            </value>
            <value>
                <fullName>ACOMPANHE SEUS PEDIDOS</fullName>
            </value>
            <value>
                <fullName>LOCAR</fullName>
            </value>
            <value>
                <fullName>MANUTENÇÃO CORRETIVA</fullName>
            </value>
            <value>
                <fullName>MANUTENÇÃO PREVENTIVA</fullName>
            </value>
            <value>
                <fullName>NOTAS FISCAIS/BOLETOS</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
            <value>
                <fullName>RECLAMAÇÕES</fullName>
            </value>
            <value>
                <fullName>SUGESTÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>