force-app/main/default/objects/Case/fields/Avalia_o_do_Caso__c.field-meta.xml
<CustomField>
    <fullName>Avalia_o_do_Caso__c</fullName>
    <label>Avaliação do Caso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PÉSSIMO</fullName>
            </value>
            <value>
                <fullName>RUIM</fullName>
            </value>
            <value>
                <fullName>REGULAR</fullName>
            </value>
            <value>
                <fullName>BOM</fullName>
            </value>
            <value>
                <fullName>ÓTIMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>