force-app/main/default/objects/Case/fields/Caso_Aberto_Dias__c.field-meta.xml
<CustomField>
    <fullName>Caso_Aberto_Dias__c</fullName>
    <formula>IF( ISBLANK( ClosedDate ) ,TODAY()-DATEVALUE(CreatedDate),	ClosedDate-CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caso Aberto (Dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>