force-app/main/default/objects/Case/fields/Contato_investigacao__c.field-meta.xml
<CustomField>
    <fullName>Contato_investigacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resp</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Casos (Resp)</relationshipLabel>
    <relationshipName>Casos4</relationshipName>
    <type>Lookup</type>
</CustomField>