force-app/main/default/objects/Case/fields/Contato_resposta_ao_reclamante__c.field-meta.xml
<CustomField>
    <fullName>Contato_resposta_ao_reclamante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resp</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Casos (Resp)</relationshipLabel>
    <relationshipName>Casos2</relationshipName>
    <type>Lookup</type>
</CustomField>