force-app/main/default/objects/Case/fields/ContratodeServico__c.field-meta.xml
<CustomField>
    <fullName>ContratodeServico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato de Serviço</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>