force-app/main/default/objects/Case/fields/Data_acao_imediata__c.field-meta.xml
<CustomField>
    <fullName>Data_acao_imediata__c</fullName>
    <label>Data</label>
    <type>Date</type>
</CustomField>