force-app/main/default/objects/Case/fields/Data_descricao_da_reclamacao__c.field-meta.xml
<CustomField>
    <fullName>Data_descricao_da_reclamacao__c</fullName>
    <label>Data</label>
    <type>Date</type>
</CustomField>