force-app/main/default/objects/Case/fields/Data_investigcao__c.field-meta.xml
<CustomField>
    <fullName>Data_investigcao__c</fullName>
    <label>Data</label>
    <type>Date</type>
</CustomField>