force-app/main/default/objects/Case/fields/departamento__c.field-meta.xml
<CustomField>
    <fullName>departamento__c</fullName>
    <label>departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departamentos</valueSetName>
    </valueSet>
</CustomField>