force-app/main/default/objects/Case/fields/empresa__c.field-meta.xml
<CustomField>
    <fullName>empresa__c</fullName>
    <label>empresa</label>
    <length>120</length>
    <type>Text</type>
</CustomField>