force-app/main/default/objects/Case/fields/Empresa_do_grupo__c.field-meta.xml
<CustomField>
    <fullName>Empresa_do_grupo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa do grupo</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>