force-app/main/default/objects/Case/fields/Endere_o_do_caso__c.field-meta.xml
<CustomField>
    <fullName>Endere_o_do_caso__c</fullName>
    <label>Endereço do caso</label>
    <type>Address</type>
</CustomField>