force-app/main/default/objects/Case/fields/garantiaDeFabrica__c.field-meta.xml
<CustomField>
    <fullName>garantiaDeFabrica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>garantiaDeFabrica</label>
    <type>Checkbox</type>
</CustomField>