force-app/main/default/objects/Case/fields/Indicador__c.field-meta.xml
<CustomField>
    <fullName>Indicador__c</fullName>
    <label>Indicador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DÚVIDAS OU ESCLARECIMENTOS</fullName>
            </value>
            <value>
                <fullName>ELOGIO</fullName>
            </value>
            <value>
                <fullName>RECLAMAÇÃO</fullName>
            </value>
            <value>
                <fullName>SOLICITAÇÃO DE ATENDIMENTO</fullName>
            </value>
            <value>
                <fullName>SUGESTÃO</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>