force-app/main/default/objects/Case/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca</label>
    <type>TextArea</type>
</CustomField>