force-app/main/default/objects/Case/fields/Motivo_acao_imediata__c.field-meta.xml
<CustomField>
    <fullName>Motivo_acao_imediata__c</fullName>
    <label>Motivo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>