force-app/main/default/objects/Case/fields/Motivo_resposta_ao_reclamante__c.field-meta.xml
<CustomField>
    <fullName>Motivo_resposta_ao_reclamante__c</fullName>
    <label>Motivo</label>
    <type>TextArea</type>
</CustomField>