force-app/main/default/objects/Case/fields/Nome_do_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Casos (Nome do cliente)</relationshipLabel>
    <relationshipName>Casos6</relationshipName>
    <type>Lookup</type>
</CustomField>