force-app/main/default/objects/Case/fields/Nome_do_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Equipamento__c</fullName>
    <label>Nome do Equipamento</label>
    <type>TextArea</type>
</CustomField>