force-app/main/default/objects/Case/fields/O_Cliente_possui_Contrato__c.field-meta.xml
<CustomField>
    <fullName>O_Cliente_possui_Contrato__c</fullName>
    <label>O Cliente possui Contrato ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>