force-app/main/default/objects/Case/fields/Prazo_acao_imediata__c.field-meta.xml
<CustomField>
    <fullName>Prazo_acao_imediata__c</fullName>
    <inlineHelpText>Prazo em dias</inlineHelpText>
    <label>Prazo</label>
    <length>3</length>
    <type>Text</type>
</CustomField>