force-app/main/default/objects/Case/fields/primeiroNome__c.field-meta.xml
<CustomField>
    <fullName>primeiroNome__c</fullName>
    <label>Nome</label>
    <length>80</length>
    <type>Text</type>
</CustomField>