force-app/main/default/objects/Case/fields/Referente__c.field-meta.xml
<CustomField>
    <fullName>Referente__c</fullName>
    <label>Referente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Sub_Tipo__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CALIBRAÇÃO</fullName>
            </value>
            <value>
                <fullName>CONTRATOS</fullName>
            </value>
            <value>
                <fullName>ENSAIO DE SEG. ELÉTRICA</fullName>
            </value>
            <value>
                <fullName>GARANTIA DE SERVIÇO</fullName>
            </value>
            <value>
                <fullName>GESTÃO DE ATIVOS</fullName>
            </value>
            <value>
                <fullName>INSTALAÇÃO DE EQUIPAMENTOS</fullName>
            </value>
            <value>
                <fullName>LOCAÇÃO</fullName>
            </value>
            <value>
                <fullName>MANUTENÇÃO CORRETIVA</fullName>
            </value>
            <value>
                <fullName>MANUTENÇÃO PREVENTIVA</fullName>
            </value>
            <value>
                <fullName>PEÇAS E ACESSÓRIOS</fullName>
            </value>
            <value>
                <fullName>QUALIFICAÇÃO DE DESEMPENHO</fullName>
            </value>
            <value>
                <fullName>QUALIFICAÇÃO DE INSTALAÇÃO</fullName>
            </value>
            <value>
                <fullName>QUALIFICAÇÃO DE OPERAÇÃO</fullName>
            </value>
            <value>
                <fullName>SOFTWARE</fullName>
            </value>
            <value>
                <fullName>TREINAMENTOS</fullName>
            </value>
            <value>
                <fullName>VISITA TÉCNICA</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
            <value>
                <fullName>DENUNCIA</fullName>
            </value>
            <value>
                <fullName>GARANTIA DE FÁBRICA</fullName>
            </value>
            <value>
                <fullName>QUALIFICAÇÃO AMBIENTAL</fullName>
            </value>
            <value>
                <fullName>DEMONSTRAÇÃO</fullName>
            </value>
            <value>
                <fullName>EQUIPAMENTO</fullName>
            </value>
            <value>
                <fullName>ACESSÓRIOS</fullName>
            </value>
            <value>
                <fullName>PARTES E PEÇAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>