force-app/main/default/objects/Case/fields/Regional_de_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Regional_de_Servi_o__c</fullName>
    <label>Regional de Serviço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regi_es_Servi_o</valueSetName>
    </valueSet>
</CustomField>