force-app/main/default/objects/Case/fields/Resposta_ao_reclamante_por_meio__c.field-meta.xml
<CustomField>
    <fullName>Resposta_ao_reclamante_por_meio__c</fullName>
    <label>Resposta ao reclamante por meio de:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>e-mail</fullName>
            </value>
            <value>
                <fullName>carta</fullName>
            </value>
            <value>
                <fullName>fax</fullName>
            </value>
            <value>
                <fullName>outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>