force-app/main/default/objects/Case/fields/RG_IAS__c.field-meta.xml
<CustomField>
    <fullName>RG_IAS__c</fullName>
    <label>RG</label>
    <length>80</length>
    <type>Text</type>
</CustomField>