force-app/main/default/objects/Case/fields/sobrenome__c.field-meta.xml
<CustomField>
    <fullName>sobrenome__c</fullName>
    <label>sobrenome</label>
    <length>120</length>
    <type>Text</type>
</CustomField>