force-app/main/default/objects/Case/fields/Sub_indicador__c.field-meta.xml
<CustomField>
    <fullName>Sub_indicador__c</fullName>
    <label>Sub-indicador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATENDIMENTO</fullName>
            </value>
            <value>
                <fullName>ENTREGA</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
            <value>
                <fullName>PRODUTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>