force-app/main/default/objects/Case/fields/Tipo_de_manuten_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_manuten_o__c</fullName>
    <label>Tipo de manutenção</label>
    <type>TextArea</type>
</CustomField>