force-app/main/default/objects/Case/recordTypes/Caso_interno.recordType-meta.xml
<RecordType>
    <fullName>Caso_interno</fullName>
    <active>true</active>
    <businessProcess>Serviços</businessProcess>
    <description>Utilizado para criar casos internos ao Facilities, como manutenções prediais etc</description>
    <label>Caso interno</label>
</RecordType>