force-app/main/default/objects/Case/recordTypes/Reclama_o_do_cliente.recordType-meta.xml
<RecordType>
    <fullName>Reclama_o_do_cliente</fullName>
    <active>true</active>
    <businessProcess>Produtos</businessProcess>
    <description>Utilizado para criar casos de reclamação exclusivamente quando o reclamante é um cliente, identificado via CNPJ ou CPF</description>
    <label>Reclamação do cliente</label>
</RecordType>