force-app/main/default/objects/Case/recordTypes/Servicos.recordType-meta.xml
<RecordType>
    <fullName>Servicos</fullName>
    <active>true</active>
    <businessProcess>Serviços</businessProcess>
    <description>Demais casos gerais</description>
    <label>Casos Gerais</label>
</RecordType>