force-app/main/default/objects/Case/validationRules/PREENCHIMENTO_DE_CONTRATO_DE_SERVICO.validationRule-meta.xml
<ValidationRule>
    <fullName>PREENCHIMENTO_DE_CONTRATO_DE_SERVICO</fullName>
    <active>false</active>
    <description>SE HOUVER UM CONTRATO DE SERVIÇO ADICIONA-LO</description>
    <errorConditionFormula>ISPICKVAL(O_Cliente_possui_Contrato__c,&quot;SIM&quot;) &amp;&amp;  ISBLANK( ContratodeServico__c )</errorConditionFormula>
    <errorDisplayField>ContratodeServico__c</errorDisplayField>
    <errorMessage>INFORME O CONTRATO DE SERVIÇO</errorMessage>
</ValidationRule>