force-app/main/default/objects/Case/validationRules/Restringe_Fechamento_do_caso.validationRule-meta.xml
<ValidationRule>
    <fullName>Restringe_Fechamento_do_caso</fullName>
    <active>true</active>
    <description>Apenas o analista de qualidade pode finalisar um caso</description>
    <errorConditionFormula>AND(
$User.ProfileId != &apos;00e31000001dwIY&apos;,
TEXT(Status) = &apos;FINALIZADO&apos;, 
!$User.Ignorar_erros__c,
ISCHANGED(Status)
)</errorConditionFormula>
    <errorMessage>Apenas o departamento de Qualidade pode finalizar um Caso</errorMessage>
</ValidationRule>