force-app/main/default/objects/Case/listViews/Casos_Internos.listView-meta.xml
<ListView>
    <fullName>Casos_Internos</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>empresa__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>assunto__c</columns>
    <columns>departamento__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Caso_interno</value>
    </filters>
    <label>Casos Internos</label>
</ListView>