force-app/main/default/objects/Case/listViews/Casos_Locacao.listView-meta.xml
<ListView>
    <fullName>Casos_Locacao</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>assunto__c</columns>
    <columns>empresa__c</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/1/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>departamento__c</field>
        <operation>equals</operation>
        <value>Locação</value>
    </filters>
    <label>Casos Locação</label>
</ListView>