force-app/main/default/objects/Case/listViews/Casos_Servi_o.listView-meta.xml
<ListView>
    <fullName>Casos_Servi_o</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>assunto__c</columns>
    <columns>primeiroNome__c</columns>
    <columns>empresa__c</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/1/2022 12:00 AM</value>
    </filters>
    <label>Casos Serviço</label>
</ListView>