force-app/main/default/objects/Case/listViews/RECLAMACOES.listView-meta.xml
<ListView>
    <fullName>RECLAMACOES</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>assunto__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>assunto__c</field>
        <operation>equals</operation>
        <value>RECLAMAÇÕES</value>
    </filters>
    <label>RECLAMAÇÕES</label>
    <sharedTo>
        <group>Qualidade</group>
    </sharedTo>
</ListView>