force-app/main/default/objects/Case/listViews/Registro_Reclama_es_dos_clientes_Comerc.listView-meta.xml
<ListView>
    <fullName>Registro_Reclama_es_dos_clientes_Comerc</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>empresa__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>assunto__c</columns>
    <columns>departamento__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Reclama_o_do_cliente</value>
    </filters>
    <filters>
        <field>departamento__c</field>
        <operation>equals</operation>
        <value>Comercial</value>
    </filters>
    <label>Registro Reclamações dos clientes Comerc</label>
</ListView>