force-app/main/default/objects/Case/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>empresa__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>assunto__c</columns>
    <columns>departamento__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Reclama_o_do_cliente</value>
    </filters>
    <label>Reclamações dos clientes</label>
</ListView>