force-app/main/default/objects/Case/listViews/Todos_casos.listView-meta.xml
<ListView>
    <fullName>Todos_casos</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>primeiroNome__c</columns>
    <columns>empresa__c</columns>
    <columns>Endere_o_do_caso__StateCode__s</columns>
    <columns>assunto__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Case.Caso_interno</value>
    </filters>
    <label>Todos casos</label>
</ListView>