force-app/main/default/objects/Case/listViews/X01_Novos.listView-meta.xml
<ListView>
    <fullName>X01_Novos</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>NOVO</value>
    </filters>
    <label>01 - Novos</label>
</ListView>