force-app/main/default/objects/Case/listViews/X02_Em_Analise.listView-meta.xml
<ListView>
    <fullName>X02_Em_Analise</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>EM ANÁLISE</value>
    </filters>
    <label>02 - Em Análise</label>
</ListView>