force-app/main/default/objects/Case/listViews/X03_Escalado.listView-meta.xml
<ListView>
    <fullName>X03_Escalado</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>ESCALADO</value>
    </filters>
    <label>03 - Escalado</label>
</ListView>