force-app/main/default/objects/Case/listViews/X04_Solu_o_Proposta.listView-meta.xml
<ListView>
    <fullName>X04_Solu_o_Proposta</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>SOLUÇÃO PROPOSTA</value>
    </filters>
    <label>04 - Solução Proposta</label>
</ListView>