force-app/main/default/objects/Case/listViews/X05_Aguardando_Autoriza_o.listView-meta.xml
<ListView>
    <fullName>X05_Aguardando_Autoriza_o</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>AGUARDANDO AUTORIZAÇÃO</value>
    </filters>
    <label>05 - Aguardando Autorização</label>
</ListView>